media: Disable opus decode phase inversion for mono output.

Encoders may use "phase inversion" to improve stereo compression. But
this creates artifacts if the decoded stereo is later down-mixed to
mono. This CL sets a flag on the decoder to disable the phase inversion
decode step whenever the HW is detected as mono.

Bug: 806219

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Ie5f911910dbcc61e48ea58da51c48c0c2c2ebdc3
Reviewed-on: https://chromium-review.googlesource.com/1030907
Commit-Queue: Chrome Cunningham <chcunningham@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555156}
Former-commit-id: 5e1c7c43ae6f4e925d131944f9191d964661e098