media/filters/decoder_stream.h
@@ -62,7 +62,8 @@ class MEDIA_EXPORT DecoderStream {
   using ReadCB =
       base::RepeatingCallback<void(Status, const scoped_refptr<Output>&)>;
 
-  DecoderStream(const scoped_refptr<base::SingleThreadTaskRunner>& task_runner,
+  DecoderStream(std::unique_ptr<DecoderStreamTraits<StreamType>> traits,
+                const scoped_refptr<base::SingleThreadTaskRunner>& task_runner,
                 CreateDecodersCB create_decoders_cb,
                 MediaLog* media_log);
   virtual ~DecoderStream();
@@ -213,7 +214,7 @@ class MEDIA_EXPORT DecoderStream {
   void MaybePrepareAnotherOutput();
   void OnPreparedOutputReady(const scoped_refptr<Output>& frame);
 
-  DecoderStreamTraits<StreamType> traits_;
+  std::unique_ptr<DecoderStreamTraits<StreamType>> traits_;
 
   scoped_refptr<base::SingleThreadTaskRunner> task_runner_;
   CreateDecodersCB create_decoders_cb_;
