media/filters/decoder_stream_traits.cc
@@ -35,16 +35,19 @@ scoped_refptr<DecoderStreamTraits<DemuxerStream::AUDIO>::OutputType>
   return OutputType::CreateEOSBuffer();
 }
 
-// static
+DecoderStreamTraits<DemuxerStream::AUDIO>::DecoderStreamTraits(
+    MediaLog* media_log,
+    ChannelLayout initial_hw_layout)
+    : media_log_(media_log), initial_hw_layout_(initial_hw_layout) {}
+
 DecoderStreamTraits<DemuxerStream::AUDIO>::DecoderConfigType
 DecoderStreamTraits<DemuxerStream::AUDIO>::GetDecoderConfig(
     DemuxerStream* stream) {
-  return stream->audio_decoder_config();
+  auto config = stream->audio_decoder_config();
+  // Demuxer is not aware of hw layout, so we set it here.
+  config.set_target_output_channel_layout(initial_hw_layout_);
+  return config;
 }
-
-DecoderStreamTraits<DemuxerStream::AUDIO>::DecoderStreamTraits(
-    MediaLog* media_log)
-    : media_log_(media_log) {}
 
 void DecoderStreamTraits<DemuxerStream::AUDIO>::ReportStatistics(
     const StatisticsCB& statistics_cb,
@@ -114,17 +117,16 @@ DecoderStreamTraits<DemuxerStream::VIDEO>::CreateEOSOutput() {
   return OutputType::CreateEOSFrame();
 }
 
-// static
+DecoderStreamTraits<DemuxerStream::VIDEO>::DecoderStreamTraits(
+    MediaLog* media_log)
+    // Randomly selected number of samples to keep.
+    : keyframe_distance_average_(16) {}
+
 DecoderStreamTraits<DemuxerStream::VIDEO>::DecoderConfigType
 DecoderStreamTraits<DemuxerStream::VIDEO>::GetDecoderConfig(
     DemuxerStream* stream) {
   return stream->video_decoder_config();
 }
-
-DecoderStreamTraits<DemuxerStream::VIDEO>::DecoderStreamTraits(
-    MediaLog* media_log)
-    // Randomly selected number of samples to keep.
-    : keyframe_distance_average_(16) {}
 
 void DecoderStreamTraits<DemuxerStream::VIDEO>::ReportStatistics(
     const StatisticsCB& statistics_cb,
