media/filters/audio_decoder_selector_unittest.cc
@@ -11,6 +11,7 @@
 #include "base/message_loop/message_loop.h"
 #include "base/run_loop.h"
 #include "build/build_config.h"
+#include "media/base/channel_layout.h"
 #include "media/base/gmock_callback_support.h"
 #include "media/base/media_util.h"
 #include "media/base/mock_filters.h"
@@ -59,7 +60,7 @@ class AudioDecoderSelectorTest : public ::testing::Test {
   };
 
   AudioDecoderSelectorTest()
-      : traits_(&media_log_),
+      : traits_(&media_log_, CHANNEL_LAYOUT_STEREO),
         demuxer_stream_(
             new StrictMock<MockDemuxerStream>(DemuxerStream::AUDIO)) {
     // |cdm_context_| and |decryptor_| are conditionally created in
